env/code_53bf44646e472/stderr.txt
  File "main.py", line 4
    a* = i
       ^
SyntaxError: invalid syntax
